overflow fix, might need to revert

--- a/css/cyberpunk.css
+++ b/css/cyberpunk.css
@@ -73,6 +73,8 @@ html {
   font-family: 'BlenderProBook';
   padding: 0;
   margin: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 body {
